--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,11 +35,11 @@ ipykernel = "^6.6.1"
 pytest = "^6.2.5"
 commitizen = "^2.20.3"
 pre-commit = "^2.16.0"
-black = "^21.12b0"
 Sphinx = "^4.4.0"
 pydata-sphinx-theme = "^0.8.0"
 sphinx-jinja = "^2.0.1"
 sphinx-copybutton = "^0.5.0"
+black = "^22.3.0"
 
 [tool.poetry.extras]
 pyinstaller = ["pyinstaller"]
