--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,13 @@ python = ">=3.7,<3.11"
 zarr = "^2.10.3"
 "ruamel.yaml" = "^0.17.20"
 click = "^8.0.4"
-pyinstaller = { version = "^4.10", optional = true}
 colorama = "^0.4.4"
 termcolor = "^1.1.0"
 fsspec = "^2022.2.0"
 sentry-sdk = "^1.5.8"
 platformdirs = "^2.5.1"
 valida = "^0.4.0"
+pyinstaller = {version = "^5.5", optional = true}
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
@@ -45,7 +45,7 @@ black = "^22.3.0"
 pyinstaller = ["pyinstaller"]
 
 [tool.poetry.scripts]
-hpcflow = 'hpcflow.cli:hpcflow.CLI'
+hpcflow = 'hpcflow.cli.cli:hpcflow.CLI'
 
 [tool.poetry.plugins.pyinstaller40]
 hook-dirs = "pyinstaller.__init__:get_hook_dirs"
