--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,12 +30,11 @@ fsspec = "^2022.2.0"
 sentry-sdk = "^1.5.8"
 platformdirs = "^2.5.1"
 valida = "^0.4.0"
-pyinstaller = {version = "^5.5", optional = true}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
 ipykernel = "^6.6.1"
-pytest = "^6.2.5"
+pytest = "^7.2.0"
 commitizen = "^2.20.3"
 pre-commit = "^2.16.0"
 Sphinx = "^4.4.0"
@@ -44,8 +43,11 @@ sphinx-jinja = "^2.0.1"
 sphinx-copybutton = "^0.5.0"
 black = "^22.3.0"
 
-[tool.poetry.extras]
-pyinstaller = ["pyinstaller"]
+[tool.poetry.group.test.dependencies]
+pytest = "^7.2.0"
+
+[tool.poetry.group.pyinstaller.dependencies]
+pyinstaller = "^5.5"
 
 [tool.poetry.scripts]
 hpcflow = 'hpcflow.cli.cli:hpcflow.CLI'
