--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ fsspec = "^2022.2.0"
 sentry-sdk = "^1.5.8"
 platformdirs = "^2.5.1"
 valida = "^0.4.0"
+pytest = {version = "^7.2.0", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
@@ -48,6 +49,9 @@ pytest = "^7.2.0"
 
 [tool.poetry.group.pyinstaller.dependencies]
 pyinstaller = "^5.5"
+
+[tool.poetry.extras]
+test = ["pytest"]
 
 [tool.poetry.scripts]
 hpcflow = 'hpcflow.cli.cli:hpcflow.CLI'
