--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -181,7 +181,7 @@ jobs:
         run: poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: poetry install --no-dev --extras "pyinstaller"
+        run: poetry install --without dev
 
       - name: Build with pyinstaller (non Windows)
         if: "!contains(matrix.os, 'windows')"
@@ -264,7 +264,7 @@ jobs:
           key: venv-build-CentOS-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
-        run: poetry install --no-dev --extras "pyinstaller"
+        run: poetry install --without dev
 
       - name: Build with pyinstaller for CentOS
         working-directory: pyinstaller
@@ -329,7 +329,7 @@ jobs:
         run: poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: poetry install
+        run: poetry install --without dev,pyinstaller
 
       - name: Build (for PyPI)
         run: |
@@ -434,7 +434,7 @@ jobs:
         run: poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: poetry install
+        run: poetry install --without test,pyinstaller
 
       - name: Build documentation with Sphinx
         run: |
