--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -122,9 +122,9 @@ jobs:
           echo $hpcflow_vers_expected
           [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
 
-      - name: Basic CLI checks
+      - name: Run test suite on the frozen app
         run: |
-          pyinstaller/dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} config get --all
+          pyinstaller/dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} test
 
   build-executables-linux:
     runs-on: ubuntu-latest
@@ -193,6 +193,6 @@ jobs:
           echo $hpcflow_vers_expected
           [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
 
-      - name: Basic CLI checks
+      - name: Run test suite on the frozen app
         run: |
-          pyinstaller/dist/hpcflow-${{ env.vers }}-linux config get --all
+          pyinstaller/dist/hpcflow-${{ env.vers }}-linux test
