--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,11 @@ name: release
 concurrency: release
 
 env:
-  PYTHON_VERSION_BUMP: 3.9
+  PYTHON_VERSION_BUMP: "3.10"
   PYTHON_VERSION_BUILD_EXES: "3.10"
-  PYTHON_VERSION_RELEASE: 3.9
-  PYTHON_VERSION_BUILD_DOCS: 3.9
-  PYTHON_VERSION_UPDATE_WEB: 3.9
+  PYTHON_VERSION_RELEASE: "3.10"
+  PYTHON_VERSION_BUILD_DOCS: "3.10"
+  PYTHON_VERSION_UPDATE_WEB: "3.10"
 
 on:
   pull_request_target:
@@ -235,9 +235,9 @@ jobs:
           echo $hpcflow_vers_expected
           [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
 
-      - name: Basic CLI checks
+      - name: Run test suite on the frozen app
         run: |
-          pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} config get --all
+          pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} test
 
   build-executables-linux:
     runs-on: ubuntu-latest
@@ -251,6 +251,7 @@ jobs:
 
       - name: Set ownership
         run: |
+          # see: https://github.com/actions/runner/issues/2033#issuecomment-1204205989
           # this is to fix GIT not liking owner of the checkout dir
           chown -R $(id -u):$(id -g) $PWD
 
@@ -298,9 +299,9 @@ jobs:
           echo $hpcflow_vers_expected
           [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
 
-      - name: Basic CLI checks
+      - name: Run test suite on the frozen app
         run: |
-          pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux config get --all
+          pyinstaller/dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux test
 
   release-github-PyPI:
     needs: [bump-version, build-executables, build-executables-linux]
