--- a/.github/workflows/build-exes.yml.in
+++ b/.github/workflows/build-exes.yml.in
@@ -16,12 +16,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, macos-11]
+        os: [windows-latest, macos-latest]
         include:
-          - os: windows-2019
+          - os: windows-latest
             executable_ext: .exe
             executable_os: win
-          - os: macos-11
+          - os: macos-latest
             executable_ext: ""
             executable_os: macOS
 
@@ -137,6 +137,7 @@ jobs:
 
       - name: Set ownership
         run: |
+          # see: https://github.com/actions/runner/issues/2033#issuecomment-1204205989
           # this is to fix GIT not liking owner of the checkout dir
           chown -R $(id -u):$(id -g) $PWD
 
