--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -90,7 +90,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
-          path: pyinstaller/dist/onedir/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
+          path: pyinstaller/dist/onedir/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}
 
       - name: Upload spec file
         uses: actions/upload-artifact@v3
@@ -157,8 +157,8 @@ jobs:
       - name: Upload executable artifact (folder)
         uses: actions/upload-artifact@v3
         with:
-          name: hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
-          path: pyinstaller/dist/onedir/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
+          name: hpcflow-${{ env.vers }}-linux
+          path: pyinstaller/dist/onedir/hpcflow-${{ env.vers }}-linux
 
       - name: Upload spec file
         uses: actions/upload-artifact@v3
