--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -156,11 +156,11 @@ jobs:
 
       - name: Build with pyinstaller for CentOS (file)
         working-directory: pyinstaller
-        run: ./make.sh hpcflow-${{ env.vers }}-linux ${{ github.event.inputs.logLevel } onefile}
+        run: ./make.sh hpcflow-${{ env.vers }}-linux ${{ github.event.inputs.logLevel }} onefile
 
       - name: Build with pyinstaller for CentOS (folder)
         working-directory: pyinstaller
-        run: ./make.sh hpcflow-${{ env.vers }}-linux-dir ${{ github.event.inputs.logLevel } onefolder}
+        run: ./make.sh hpcflow-${{ env.vers }}-linux-dir ${{ github.event.inputs.logLevel }} onefolder
 
       - name: Upload executable artifact (file)
         uses: actions/upload-artifact@v3
