--- a/.github/workflows/build-exes.yml.in
+++ b/.github/workflows/build-exes.yml.in
@@ -78,7 +78,7 @@ jobs:
       - name: Build with pyinstaller (non Windows, folder)
         if: "!contains(matrix.os, 'windows')"
         working-directory: {{ pyinstaller_dir }}
-        run: ./make.sh {{ executable_name }}-{% raw %}${{ env.vers }}-${{ matrix.executable_os }}-dir ${{ github.event.inputs.logLevel }} 'onefolder'{% endraw %}
+        run: ./make.sh {{ executable_name }}-{% raw %}${{ env.vers }}-${{ matrix.executable_os }}-dir ${{ github.event.inputs.logLevel }} 'onedir'{% endraw %}
 
       - name: Build with pyinstaller (Windows, file)
         if: contains(matrix.os, 'windows')
@@ -88,7 +88,7 @@ jobs:
       - name: Build with pyinstaller (Windows, folder)
         if: contains(matrix.os, 'windows')
         working-directory: {{ pyinstaller_dir }}
-        run: ./make.ps1 -ExeName "{{ executable_name }}-{% raw %}${{ env.vers }}-${{ matrix.executable_os }}-dir" -LogLevel ${{ github.event.inputs.logLevel }} -BuildType 'onefolder'{% endraw %}
+        run: ./make.ps1 -ExeName "{{ executable_name }}-{% raw %}${{ env.vers }}-${{ matrix.executable_os }}-dir" -LogLevel ${{ github.event.inputs.logLevel }} -BuildType 'onedir'{% endraw %}
 
       - name: Upload executable artifact (file)
         uses: actions/upload-artifact@v3
@@ -164,7 +164,7 @@ jobs:
 
       - name: Build with pyinstaller for CentOS (folder)
         working-directory: pyinstaller
-        run: ./make.sh {{ executable_name }}-{% raw %}${{ env.vers }}-linux-dir ${{ github.event.inputs.logLevel }}{% endraw %} onefolder
+        run: ./make.sh {{ executable_name }}-{% raw %}${{ env.vers }}-linux-dir ${{ github.event.inputs.logLevel }}{% endraw %} onedir
 
       - name: Upload executable artifact (file)
         uses: actions/upload-artifact@v3
