chore: Test separate compress script

--- a/.github/workflows/release_testing.yml
+++ b/.github/workflows/release_testing.yml
@@ -74,6 +74,11 @@ jobs:
         working-directory: pyinstaller
         run: ./make.ps1 -ExeName "hpcflow-release-test-build-${{ matrix.executable_os }}-dir" -LogLevel INFO -BuildType 'onedir'
 
+      - name: Compress folder (Windows, folder)
+        if: contains(matrix.os, 'windows')
+        working-directory: pyinstaller
+        run: ./compress.ps1 -ExeName "hpcflow-release-test-build-${{ matrix.executable_os }}-dir" -BuildType 'onedir'
+          
       - name: Upload executable artifact (file)
         uses: actions/upload-artifact@v3
         with:
@@ -86,12 +91,12 @@ jobs:
           name: hpcflow-release-test-build-${{ matrix.executable_os }}-dir
           path: pyinstaller/dist/onedir/hpcflow-release-test-build-${{ matrix.executable_os }}-dir
 
-      - name: Upload executable artifact (Windows, compressed folder)
+      - name: Upload compressed artifact (folder)
         if: contains(matrix.os, 'windows')
         uses: actions/upload-artifact@v3
         with:
           name: hpcflow-release-test-build-${{ matrix.executable_os }}-dir.zip
-          path: pyinstaller/dist/onedir/hpcflow-release-test-build-${{ matrix.executable_os }}-dir
+          path: pyinstaller/dist/onedir/hpcflow-release-test-build-${{ matrix.executable_os }}-dir.zip
 
   build-executables-linux:
     runs-on: ubuntu-latest
@@ -153,7 +158,14 @@ jobs:
       - uses: actions/download-artifact@v3
         id: download_executables
         with:
-          name: hpcflow-release-test-build-win-dir.zip
+          name: hpcflow-release-test-build-macOS-dir
+
+      - name: Display structure of downloaded files
+        run: ls -R
+
+      - uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r hpcflow-release-test-build-macOS-dir.zip hpcflow-release-test-build-macOS-dir 
 
       - name: Display structure of downloaded files
         run: ls -R
@@ -164,5 +176,5 @@ jobs:
         with:
           tag_name: test-tag 
           files: |
-            hpcflow-release-test-build-win-dir.zip
+            hpcflow-release-test-build-macOS-dir.zip
           prerelease: true 
