docs: various sphinx docs updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ msgpack = "^1.0.4"
 reretry = "^0.11.8"
 psutil = "^5.9.4"
 watchdog = "^2.1.9"
-valida = "^0.6.0"
+valida = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
@@ -34,13 +34,15 @@ ipykernel = "^6.6.1"
 pytest = "^7.2.0"
 commitizen = "^2.20.3"
 pre-commit = "^2.16.0"
-sphinx = "^7.0.1"
-pydata-sphinx-theme = "^0.13.3"
-sphinx-jinja = "^2.0.1"
-sphinx-copybutton = "^0.5.0"
 black = "^22.3.0"
 tuna = "^0.5.11"
+sphinx = ">=4,<7"
 sphinx-click = "^4.4.0"
+sphinx-jinja = "^2.0.1"
+sphinx-copybutton = "^0.5.0"
+sphinx-design = "^0.4.1"
+sphinx-togglebutton = "^0.3.2"
+pydata-sphinx-theme = "^0.13.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
