fix: Multiline output

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -440,7 +440,7 @@ jobs:
           # Save multiline output
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "binary_download_links<<$EOF" >> $GITHUB_OUTPUT
-          $binaryYaml >> $GITHUB_OUTPUT
+          echo "$binaryYaml" >> $GITHUB_OUTPUT
           echo "$EOF" >> $GITHUB_OUTPUT
 
       - name: Publish (to https://upload.pypi.org/legacy/)
