fix: makes sed command work with both GNU and BSD/macOS Sed

--- a/.github/workflows/test_pre_python.yml
+++ b/.github/workflows/test_pre_python.yml
@@ -26,8 +26,9 @@ jobs:
 
       - name: Edits python version upper bound
         run: |
-          sed -i "/python = /s/<3.12/<=3.12/" pyproject.toml
+          sed -i.bak "/python = /s/<3.12/<=3.12/" pyproject.toml
           grep -rnie python pyproject.toml
+          rm pyproject.toml.bak
 
       - uses: actions/setup-python@v4
         with:
