fix: pytest run via python -m does not detect custom option, so change to use hpcflow script

--- a/.github/workflows/test-schedulers.yml
+++ b/.github/workflows/test-schedulers.yml
@@ -49,4 +49,4 @@ jobs:
 
       - name: Run slurm tests only tests
         run: |
-          poetry run python -m pytest --slurm
+          poetry run hpcflow test --slurm
